# minitar

./: Cargo.toml  README.md
src/: error.rs  lib.rs  tar.rs  test.rs
test/: 1.lnk  1.tar
