[package]
name = "minitar"
version = "0.1.0"
authors = ["geno nullfree <nullfree.geno@gmail.com> <nullfree.geno@gmail.com>"]
edition = "2018"
description = "A minimal implementation of the tape archive (tar) format in rust."
keywords = ["tar", "tape", "archive", "minimal"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/genonullfree/minitar"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
